# python-tool-competition-2024-klara

./: pyproject.toml
python_tool_competition_2024_klara/: generator.py
